# physics-pinn

./: CHANGELOG.md  Makefile  README.md  app.py  comparison.ipynb  hnn_pendulum.py  pinn_inverse.py  pinn_orbital.py  pinn_pde.py  pinn_pendulum.py  pinn_threebody.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.github/: CONTRIBUTING.md
.github/workflows/: test.yml
configs/: heat_default.yaml  orbital_default.yaml  pendulum_default.yaml  threebody_default.yaml  wave_default.yaml
docs/: api.md  examples.md  theory.md
examples/: adaptive_vs_uniform.py  hnn_vs_pinn_pendulum.py  inverse_problem_demo.py  threebody_chaos.py  wave_vs_heat_comparison.py
examples/transfer_learning/: transfer_cross_physics.py  transfer_orbital.py  transfer_pendulum.py
src/: __init__.py  app.py
src/benchmarks/: __init__.py  benchmark_configs.yaml  benchmark_runner.py
src/models/: __init__.py  base_pinn.py  heat_pinn.py  hnn.py  inverse_pinn.py  multiscale_pinn.py  orbital_pinn.py  pendulum_pinn.py  threebody_pinn.py  wave_pinn.py
src/physics/: __init__.py  constants.py  equations.py
src/training/: __init__.py  adaptive_collocation.py  losses.py  schedulers.py  trainer.py  transfer.py
src/utils/: __init__.py  data_generation.py  metrics.py  plotting.py  validation.py
tests/: test_advanced_training.py  test_benchmarks.py  test_equations.py  test_heat.py  test_hnn.py  test_inverse.py  test_orbital.py  test_pendulum.py  test_threebody.py  test_transfer.py  test_wave.py
