[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "physics-pinn"
version = "1.0.0"
description = "Physics-Informed Neural Networks for Scientific Machine Learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ali Kastan"},
]
keywords = [
    "physics-informed neural networks",
    "scientific machine learning",
    "PyTorch",
    "differential equations",
    "Hamiltonian neural networks",
    "inverse problems",
    "partial differential equations",
    "transfer learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/AliKastan/physics-pinn"
Issues = "https://github.com/AliKastan/physics-pinn/issues"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
